--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,24 +1,24 @@
 find_package(GTest QUIET)
-if ( NOT ${GTest_FOUND} )
+if(NOT ${GTest_FOUND})
   include(ExternalProject)
 
-  ExternalProject_Add(GTest
-    GIT_REPOSITORY    https://github.com/google/googletest.git
-    GIT_TAG           release-1.8.1
-    SOURCE_DIR        ${CMAKE_BINARY_DIR}/../${PROJECT_NAME}-googletest-src
-    BINARY_DIR        ${CMAKE_BINARY_DIR}/../${PROJECT_NAME}-googletest-build
+  ExternalProject_Add(
+    GTest
+    GIT_REPOSITORY https://github.com/google/googletest.git
+    GIT_TAG release-1.8.1
+    SOURCE_DIR ${CMAKE_BINARY_DIR}/../${PROJECT_NAME}-googletest-src
+    BINARY_DIR ${CMAKE_BINARY_DIR}/../${PROJECT_NAME}-googletest-build
     CMAKE_CACHE_ARGS
-            -DCMAKE_INSTALL_PREFIX:STRING=${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}
-            -DCMAKE_BUILD_TYPE:STRING=Release
-            -DBUILD_GMOCK:BOOL=OFF
-            -DBUILD_GTEST:BOOL=ON
-            -DBUILD_SHARED_LIBS:BOOL=ON
-            -DGTEST_CREATE_SHARED_LIBRARY=1
-  )
+      -DCMAKE_INSTALL_PREFIX:STRING=${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}
+      -DCMAKE_BUILD_TYPE:STRING=Release
+      -DBUILD_GMOCK:BOOL=OFF
+      -DBUILD_GTEST:BOOL=ON
+      -DBUILD_SHARED_LIBS:BOOL=ON
+      -DGTEST_CREATE_SHARED_LIBRARY=1)
 
   file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}/include)
   set(GTEST_INCLUDE_DIRS ${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}/include)
-  if (MSVC)
+  if(MSVC)
     set(GTEST_LIBRARIES ${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}/bin/libgtest.dll)
     set(GTEST_MAIN_LIBRARIES ${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}/bin/libgtest_main.dll)
   else()
@@ -33,7 +33,7 @@ if(NOT TARGET GTest::GTest)
   add_library(GTest::GTest INTERFACE IMPORTED)
   set_target_properties(GTest::GTest PROPERTIES INTERFACE_INCLUDE_DIRECTORIES "${GTEST_INCLUDE_DIRS}")
   if(TARGET Threads::Threads)
-      set_target_properties(GTest::GTest PROPERTIES INTERFACE_LINK_LIBRARIES "${GTEST_LIBRARIES};Threads::Threads")
+    set_target_properties(GTest::GTest PROPERTIES INTERFACE_LINK_LIBRARIES "${GTEST_LIBRARIES};Threads::Threads")
   else()
     set_target_properties(GTest::GTest PROPERTIES INTERFACE_LINK_LIBRARIES "${GTEST_LIBRARIES}")
   endif()
@@ -53,7 +53,7 @@ macro(opw_add_test name)
   add_dependencies(${name} ${PROJECT_NAME})
   add_dependencies(run_tests ${name})
 
-  if ( NOT ${GTest_FOUND} )
+  if(NOT ${GTest_FOUND})
     add_dependencies(${name} GTest ${PROJECT_NAME})
   endif()
 endmacro()
@@ -61,7 +61,8 @@ endmacro()
 # Compares the opw solutions with an ikfast generated for the same robot model
 add_executable(${PROJECT_NAME}-test-2400-ikfast abb2400_ikfast_tests.cpp abb_irb2400_manipulator_ikfast_solver.cpp)
 target_link_libraries(${PROJECT_NAME}-test-2400-ikfast PRIVATE GTest::GTest GTest::Main ${PROJECT_NAME})
-target_compile_definitions(${PROJECT_NAME}-test-2400-ikfast PUBLIC -DIKFAST_NO_MAIN -DIKFAST_CLIBRARY -DIKFAST_HAS_LIBRARY)
+target_compile_definitions(${PROJECT_NAME}-test-2400-ikfast PUBLIC -DIKFAST_NO_MAIN -DIKFAST_CLIBRARY
+                                                                   -DIKFAST_HAS_LIBRARY)
 opw_add_test(${PROJECT_NAME}-test-2400-ikfast)
 
 # Compares a known solution for a robot with varying joint "signs"
@@ -70,8 +71,7 @@ target_link_libraries(${PROJECT_NAME}-test-sign-corrections PRIVATE GTest::GTest
 target_compile_options(${PROJECT_NAME}-test-sign-corrections PRIVATE ${OPW_COMPILE_OPTIONS_PRIVATE})
 opw_add_test(${PROJECT_NAME}-test-sign-corrections)
 
-# Runs tests that iteratively solve FK then IK then confirm the new FK matches
-# Also contains some throughput tests
+# Runs tests that iteratively solve FK then IK then confirm the new FK matches Also contains some throughput tests
 add_executable(${PROJECT_NAME}-fk-ik fk_ik_tests.cpp)
 target_link_libraries(${PROJECT_NAME}-fk-ik PRIVATE GTest::GTest GTest::Main ${PROJECT_NAME})
 target_compile_options(${PROJECT_NAME}-fk-ik PRIVATE ${OPW_COMPILE_OPTIONS_PRIVATE})
