--- a/.github/workflows/package_debian.yml
+++ b/.github/workflows/package_debian.yml
@@ -3,69 +3,56 @@ name: Package-Debian-Build
 on:
   push:
     tags:
-    - '*'
+      - '*'
 
   # allow manually starting this workflow
   workflow_dispatch:
 
 jobs:
-  industrial_ci:
+  Debian:
     name: Noetic
     runs-on: ubuntu-latest
-    env:
-      CI_NAME: Package-Debian-Build
-      OS_NAME: ubuntu
-      OS_CODE_NAME: focal
-      ROS_DISTRO: noetic
-      ROS_REPO: main
-      UPSTREAM_WORKSPACE: 'dependencies.rosinstall'
-      ROSDEP_SKIP_KEYS: "iwyu ros_industrial_cmake_boilerplate"
-      CCACHE_DIR: "/home/runner/work/opw_kinematics/opw_kinematics/Package-Debian-Build/.ccache"
-      BEFORE_RUN_TARGET_TEST_EMBED: "ici_with_unset_variables source /root/target_ws/install/setup.bash"
-      TARGET_CMAKE_ARGS: "-DCMAKE_BUILD_TYPE=Release -DOPW_PACKAGE=ON"
-      CPACK_ARTIFACTS_DIR: "/root/artifacts"
-      CPACK_ARTIFACTS_EXT: "deb"
-      CPACK_WORKING_DIR: '/root/target_ws/build/opw_kinematics'
-      DOCKER_RUN_OPTS: '-e CPACK_WORKING_DIR -e CPACK_ARTIFACTS_DIR -e CPACK_ARTIFACTS_EXT -v ~/work/opw_kinematics/opw_kinematics/artifacts:/root/artifacts'
-      AFTER_SCRIPT: '$target_ws/src/opw_kinematics/.run-cpack'
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          path: workspace/src/opw_kinematics
+
       - name: Create artifacts directory
         run: |
           mkdir artifacts
 
-      - name: Free Disk Space
+      - name: Install dependencies
+        working-directory: workspace
         run: |
-          sudo swapoff -a
-          sudo rm -f /swapfile
-          sudo apt clean
-          docker rmi $(docker image ls -aq)
-          df -h
+          pwd
+          sudo apt update -q
+          sudo apt install -q -y clang-tidy python3 python3-pip
+          sudo pip3 install -q --upgrade pip
+          sudo pip3 install -q colcon-common-extensions rosdep vcstool
+          sudo rosdep init -q
+          rosdep update -q
+          vcs import --input "${{ github.workspace }}/workspace/src/opw_kinematics/dependencies.rosinstall" src/
+          rosdep install --from-paths src --ignore-src -r -y -q
 
-      - name: Prepare ccache timestamp
-        id: ccache_cache_timestamp
-        shell: cmake -P {0}
+      - name: Build
+        working-directory: workspace
         run: |
-          string(TIMESTAMP current_date "%Y-%m-%d-%H;%M;%S" UTC)
-          message("::set-output name=timestamp::${current_date}")
+          colcon build --event-handlers console_direct+ --cmake-args -DCMAKE_BUILD_TYPE=Release -DOPW_PACKAGE=ON
+          if [ $? -ne 0 ]; then exit 1; fi
 
-      - name: ccache cache files
-        uses: actions/cache@v1.1.0
-        with:
-          path: ${{ env.CI_NAME }}/.ccache
-          key: ${{ env.CI_NAME }}-ccache-${{ steps.ccache_cache_timestamp.outputs.timestamp }}
-          restore-keys: |
-            ${{ env.CI_NAME }}-ccache-
-
-      - uses: 'ros-industrial/industrial_ci@master'
-        env: ${{env}}
+      - name: Package
+        working-directory: workspace/build/opw_kinematics
+        run: |
+          cpack --config CPackConfig.cmake
+          cp ./*.deb ${{ github.workspace }}/artifacts
+          cp ./*.tar.xz ${{ github.workspace }}/artifacts
 
       - uses: actions/upload-artifact@v2
         with:
           name: debian_package
-          path: /home/runner/work/opw_kinematics/opw_kinematics/artifacts/*.deb
+          path: ${{ github.workspace }}/artifacts/*.deb
 
       - uses: actions/upload-artifact@v2
         with:
           name: archive_package
-          path: /home/runner/work/opw_kinematics/opw_kinematics/artifacts/*.tar.xz
+          path: ${{ github.workspace }}/artifacts/*.tar.xz
