--- a/.github/workflows/package_nuget.yml
+++ b/.github/workflows/package_nuget.yml
@@ -1,55 +1,90 @@
-name: Package-Windows-Build
+name:  Package-Windows-Build
 
 on:
   push:
     tags:
-    - '*'
+      - '*'
 
   # allow manually starting this workflow
   workflow_dispatch:
 
+env:
+  VCPKG_PKGS: >-
+    eigen3
+
 jobs:
-  windows_ci:
-    name: Noetic
-    runs-on: windows-latest
-    env:
-      ROS_DISTRO: noetic
-      CPACK_WORKING_DIR: ./../../build_isolated/opw_kinematics/devel
+  NuGet:
+    name: Windows-2019
+    runs-on: windows-2019
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
-        submodules: recursive
-        path: src/opw_kinematics
-    - name: Build
+        path: workspace/src/opw_kinematics
+
+    - name: Create artifacts directory
+      run: |
+        mkdir artifacts
+
+    - name: checkout-vcpkg
+      uses: actions/checkout@v2
+      with:
+        path: vcpkg
+        repository: microsoft/vcpkg
+
+    - name: bootstrap-vcpkg
+      working-directory: vcpkg
+      run: bootstrap-vcpkg.bat
+
+    - name: vcpkg-dry-run
+      working-directory: vcpkg
       shell: cmd
       run: |
-        choco sources add -n=roswin -s https://aka.ms/ros/public --priority 1
-        choco install ros-%ROS_DISTRO%-desktop_full -y --no-progress
+        vcpkg install --dry-run --triplet x64-windows ${{ env.VCPKG_PKGS }} > vcpkg_dry_run.txt
 
-        call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.bat" -arch=amd64 -host_arch=amd64
-        call "C:\opt\ros\%ROS_DISTRO%\x64\setup.bat"
+    - name: cache-vcpkg-archives
+      if: startsWith(github.ref, 'refs/tags/v') != true
+      id: cache-vcpkg-archives
+      uses: pat-s/always-upload-cache@v3
+      with:
+        path: C:\Users\runneradmin\AppData\Local\vcpkg\archives
+        key: ${{ runner.os }}-x64-vcpkg-${{ hashFiles('vcpkg/vcpkg_dry_run.txt') }}-main
 
-        choco install console_bridge -y --no-progress
-        choco install clapack -y --no-progress
-        choco install openblas -y --no-progress
-        choco install llvm -y --no-progress
-
-        vcs import --input "${{ github.workspace }}/src/opw_kinematics/dependencies.rosinstall" src/
-
-        catkin_make_isolated --cmake-args -DCMAKE_BUILD_TYPE=Release -DOPW_PACKAGE=ON
-
-    - name: NuGet Package
-      shell: bash
+    - name: install-depends
+      shell: cmd
       run: |
-        cd src/opw_kinematics
-        bash .run-cpack
+        vcpkg integrate install
+        python -m pip install vcstool -q
+        python -m pip install colcon-common-extensions -q
+        python -m pip install ninja -q
+        vcpkg install --triplet x64-windows ${{ env.VCPKG_PKGS }}
+
+    - name: configure-msvc
+      uses: ilammy/msvc-dev-cmd@v1
+      with:
+        arch: x64
+
+    - name: build-workspace
+      working-directory: workspace
+      shell: cmd
+      run: |
+        vcs import --input "${{ github.workspace }}/workspace/src/opw_kinematics/dependencies.rosinstall" src/
+        colcon build --event-handlers console_direct+ --cmake-args -G "Ninja" -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_BUILD_TYPE=Release -DOPW_PACKAGE=ON
+        if %ERRORLEVEL% GEQ 1 exit 1
+
+    - name: Package
+      working-directory: workspace/build/opw_kinematics
+      run: |
+        cpack --config CPackConfig.cmake
+        cp ./*.nupkg ${{ github.workspace }}/artifacts
+        cp ./*.tar.xz ${{ github.workspace }}/artifacts
 
     - uses: actions/upload-artifact@v2
       with:
         name: nuget_package
-        path: ./src/opw_kinematics/*.nupkg
+        path: ${{ github.workspace }}/artifacts/*.nupkg
 
     - uses: actions/upload-artifact@v2
       with:
         name: archive_package
-        path: ./src/opw_kinematics/*.tar.xz
+        path: ${{ github.workspace }}/artifacts/*.tar.xz
+
