--- a/.github/workflows/focal_build.yml
+++ b/.github/workflows/focal_build.yml
@@ -22,7 +22,7 @@ jobs:
       ROSDEP_SKIP_KEYS: "iwyu ros_industrial_cmake_boilerplate"
       CCACHE_DIR: "/home/runner/work/opw_kinematics/opw_kinematics/Focal-Build/.ccache"
       BEFORE_RUN_TARGET_TEST_EMBED: "ici_with_unset_variables source /root/target_ws/install/setup.bash"
-      TARGET_CMAKE_ARGS: "-DCMAKE_BUILD_TYPE=Debug -DOPW_ENABLE_TESTING=ON"
+      TARGET_CMAKE_ARGS: "-DCMAKE_BUILD_TYPE=Debug -DOPW_ENABLE_TESTING=ON -DOPW_PACKAGE=ON"
     steps:
       - uses: actions/checkout@v2
 
